Root Bone displayed as Rotated #33974

Closed
opened 2013-01-23 20:58:07 +01:00 by Chris Wegener · 4 comments

%%%--- Operating System, Graphics card ---
See attached files ChrisSystemInformation1.txt

- Blender version with error, and version that worked ---

See atteched file System-info.txt

- Short description of error ---

When I switch to object mode the root bone appears as rotated even though it is not.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Add two bones in edit mode.
Switch bone type to bbones
Switch to object mode.
Root bone appears rotated.

%%%

%%%--- Operating System, Graphics card --- See attached files ChrisSystemInformation1.txt - Blender version with error, and version that worked --- See atteched file System-info.txt - Short description of error --- When I switch to object mode the root bone appears as rotated even though it is not. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Add two bones in edit mode. Switch bone type to bbones Switch to object mode. Root bone appears rotated. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%For some reason, the two bones have different roll values. The lower one has 0 deg roll, while the one above it has 180 deg roll. As a result, the bottom bone thinks it needs to blend between the two roll values, causing the b-bone segments on the lower bone to twist.

Fixed in svn (r. 54061)%%%

%%%For some reason, the two bones have different roll values. The lower one has 0 deg roll, while the one above it has 180 deg roll. As a result, the bottom bone thinks it needs to blend between the two roll values, causing the b-bone segments on the lower bone to twist. Fixed in svn (r. 54061)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for the explanation. I am still new to Blender. Fabulous program.

How can I tell what the default roll is for a bone and when I extrude a new bone?

Regards, Chris%%%

%%%Thanks for the explanation. I am still new to Blender. Fabulous program. How can I tell what the default roll is for a bone and when I extrude a new bone? Regards, Chris%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33974
No description provided.